--- a/Figure-Code/README
+++ b/Figure-Code/README
@@ -1,3 +1,4 @@
 Within this directory, you will discover the code responsible for generating every figure presented in the Master's Thesis. 
 The primary objective of this repository is to provide clarity regarding the construction and production process of these figures. 
-Additionally, it aims to emphasize the meticulous work undertaken to produce each visual representation.
+Additionally, it aims to emphasize the meticulous work undertaken to produce each visual representation. 
+In orther to compile the .py codes, one should changes the file paths to ./XXX
